data/derived/fa15/progs/unify/prog0704.ml.out
Characters 477-513:
  | Darius( e1, e2, e3 )     -> (eval (e1, x, y) +. eval (e2, x, y)) log eval (e3, x, y);;
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float
       This is not a function; it cannot be applied.
